<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchMeals">

    <ImageButton
        android:id="@+id/backBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toStartOf="@+id/noOfResultsTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/forwardBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/noOfResultsTxt"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_media_next" />

    <TextView
        android:id="@+id/noOfResultsTxt2"
        android:layout_width="65dp"
        android:layout_height="36dp"
        android:text="1/9"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/mealImg"
        app:layout_constraintEnd_toStartOf="@+id/forwardBtn2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toEndOf="@+id/backBtn2"
        app:layout_constraintTop_toBottomOf="@+id/searchBtn" />

    <EditText
        android:id="@+id/mealEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="Enter meal or Ingredent"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/searchBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="257dp"
        android:layout_height="0dp"
        android:layout_marginBottom="245dp"
        android:text="Search"
        app:layout_constraintBottom_toTopOf="@+id/mealOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealEdt" />

    <ImageView
        android:id="@+id/mealImg"
        android:layout_width="300dp"
        android:layout_height="159dp"
        android:contentDescription="Image of current meal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/mealOutput"
        android:layout_width="305dp"
        android:layout_height="152dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>