...
    "{\"meals\": [
        {\"Meal\":\"Sweet and Sour Pork\",\"DrinkAlternate\":null,\"Category\":\"Pork\",\"Area\":\"Chinese\",\"MealThumb\":\"https:\\/\\/www.themealdb.com\\/images\\/media\\/meals\\/1529442316.jpg\",\"Tags\":\"Sweet\",\"Youtube\":\"https:\\/\\/www.youtube.com\\/watch?v=mdaBIhgEAMo\",\"Ingredient1\":\"Pork\",\"Ingredient2\":\"Egg\",\"Ingredient3\":\"Water\",\"Ingredient4\":\"Salt\",\"Ingredient5\":

        {\"Meal\":\"Chicken Marengo\",\"DrinkAlternate\":null,\"Category\":\"Chicken\",\"Area\":\"French\",\"MealThumb\":\"https:\\/\\/www.themealdb.com\\/images\\/media\\/meals\\/qpxvuq1511798906.jpg\",\"Tags\":null,\"Youtube\":\"https:\\/\\/www.youtube.com\\/watch?v=U33HYUr-0Fw\",\"Ingredient1\":\"Olive Oil\",\"Ingredient2\":\"Mushrooms\",\"Ingredient3\":\"Chicken Legs\",\"Ingredient4\":\"Passat
    ]}"
</string>
    <string name="test">Meal: Chicken Marengo \nIngredients: \n- Olive Oil \n- Mushrooms \n- Chicken Legs\n - Passata \n- Chicken Stock Cube \n- Black Olives \n- Parsley</string>
    <string name="test2">Meal: Chicken Marengo Ingredients: - Olive Oil - Mushrooms - Chicken Legs - Passata - Chicken Stock Cube - Black Olives - Parsley</string>
</resources>
